--- a/trang2.html
+++ b/trang2.html
@@ -121,7 +121,7 @@
   </style>
 </head>
 <body>
-  <div class="title">💖 Tri Ân Thầy Cô 💖</div>
+  <div class="title">💖 Góc Nhỏ Của 9/13 💖</div>
 
   <div class="video-container">
     <iframe 
@@ -130,7 +130,7 @@
     </iframe>
   </div>
 
-  <div class="thankyou">Gửi lời cảm ơn sâu sắc đến thầy cô!</div>
+  <div class="thankyou">Khoảng Khắc Tuổi Học Trò</div>
 
   <!-- Hiệu ứng bong bóng và tim -->
   <script>
