--- a/gift2.html
+++ b/gift2.html
@@ -212,6 +212,31 @@
                 height: 260px;
             }
         }
+
+        .back-btn {
+            position: fixed;
+            bottom: 28px;
+            right: 28px;
+            width: 52px;
+            height: 52px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #ffd6e9, #ffbcd1, #ffe3f0);
+            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.15);
+            color: #7b1f3a;
+            font-size: 24px;
+            font-weight: bold;
+            text-align: center;
+            line-height: 52px;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            z-index: 20;
+        }
+
+        .back-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+            background: linear-gradient(135deg, #ffc8df, #ff9fbd, #ffd1e6);
+        }
     </style>
 </head>
 
@@ -258,5 +283,6 @@
     </div>
 
 </body>
+<a href="index.html" class="back-btn">↩</a>
 
 </html>
