--- a/gift3.html
+++ b/gift3.html
@@ -1,26 +1,166 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="vi">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday, My Love!</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Message</title>
 
-    <!-- font giống hình -->
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&family=Quicksand:wght@400;600&display=swap"
+        rel="stylesheet">
 
     <style>
+        :root {
+            --bg-top: #fff6fa;
+            --bg-mid: #ffeef6;
+            --accent: #d95b87;
+            --card-bg: #fff;
+            --soft: rgba(217, 91, 135, 0.08);
+        }
+
+        * {
+            box-sizing: border-box
+        }
+
+        html,
         body {
+            height: 100%;
             margin: 0;
-            font-family: "Quicksand", sans-serif;
-            background: radial-gradient(circle at 50% 30%, #ffe6ef 0%, #fbd6e3 40%, #fff 100%);
-            background-attachment: fixed;
-            background-size: cover;
-            animation: gradientMove 6s ease infinite;
+            font-family: Quicksand, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+            color: #2b1220
+        }
+
+        body {
+            background: linear-gradient(180deg, var(--bg-top) 0%, var(--bg-mid) 28%, #fff 100%);
             display: flex;
-            justify-content: center;
             align-items: center;
-            height: 100vh;
+            justify-content: center;
+            padding: 28px;
+        }
+
+        /* background "map" simple: light road + pins */
+        .scene {
+            width: min(1200px, 96vw);
+            max-width: 1400px;
+            background:
+                radial-gradient(circle at 12% 20%, rgba(0, 0, 0, 0.03), transparent 6%),
+                linear-gradient(180deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.85));
+            border-radius: 18px;
+            padding: 34px;
+            position: relative;
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.08);
+            overflow: hidden;
+        }
+
+        /* decorative tiles (faint pink boxes like the sample) */
+        .scene::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background-image:
+                linear-gradient(90deg, rgba(217, 91, 135, 0.02) 0 6%, transparent 6%),
+                linear-gradient(180deg, rgba(217, 91, 135, 0.02) 0 6%, transparent 6%);
+            background-size: 140px 140px;
+            opacity: 0.45;
+            z-index: 0;
+            pointer-events: none;
+        }
+
+        /* main content area on top of the map */
+        .card {
+            position: relative;
+            z-index: 5;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 28px;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.96), rgba(255, 250, 254, 0.98));
+            border-radius: 14px;
+            box-shadow: 0 16px 50px rgba(0, 0, 0, 0.08);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 18px;
+        }
+
+        .title {
+            font-family: 'Nunito', sans-serif;
+            font-weight: 800;
+            font-size: 40px;
+            color: #c83b6b;
+            letter-spacing: 0.6px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-shadow: 0 6px 18px rgba(200, 60, 100, 0.08);
+        }
+
+        /* big rectangle for video */
+        .video-frame {
+            width: 92%;
+            max-width: 920px;
+            aspect-ratio: 16/9;
+            background: linear-gradient(180deg, #fff, #fff0f6);
+            border-radius: 12px;
+            overflow: hidden;
+            border: 6px solid rgba(217, 91, 135, 0.06);
+            box-shadow: 0 20px 60px rgba(217, 91, 135, 0.10);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .video-frame iframe,
+        .video-frame video {
+            width: 100%;
+            height: 100%;
+            border: 0;
+            display: block;
+        }
+
+        /* a small caption area under the video */
+        .caption {
+            width: 92%;
+            max-width: 920px;
+            font-size: 14px;
+            color: #6b3b4b;
+            text-align: left;
+            opacity: 0.95;
+        }
+
+        /* responsive tweaks */
+        @media (max-width:900px) {
+            .title {
+                font-size: 28px;
+            }
+
+            .video-frame {
+                max-width: 860px;
+            }
+        }
+
+        @media (max-width:520px) {
+            .scene {
+                padding: 18px
+            }
+
+            .card {
+                padding: 16px;
+                gap: 12px
+            }
+
+            .title {
+                font-size: 20px
+            }
+
+            .video-frame {
+                width: 100%;
+                aspect-ratio: 16/9;
+                border-radius: 10px;
+            }
+
+            .caption {
+                font-size: 13px
+            }
         }
 
         /* --- Bong bóng bay --- */
@@ -105,115 +245,6 @@
             }
         }
 
-        .card {
-            background: #fde9ef;
-            border-radius: 25px;
-            display: flex;
-            width: 90%;
-            max-width: 1000px;
-            padding: 35px;
-            box-shadow: 0 4px 25px rgba(0, 0, 0, 0.1);
-        }
-
-        .film {
-            width: 34%;
-            background: #d48c98;
-            border-radius: 12px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            padding: 15px 0;
-            margin-right: 35px;
-            position: relative;
-            gap: 0px;
-            /* khoảng cách giữa 2 ảnh */
-        }
-
-        /* text “FILM NEGATIVE” */
-        .film::before,
-        .film::after {
-            content: "FILM POSITIVE";
-            position: absolute;
-            top: 50%;
-            font-size: 10px;
-            color: #fceef1;
-            font-style: italic;
-            letter-spacing: 1px;
-            transform-origin: center;
-        }
-
-        .film::before {
-            left: -35px;
-            /* sát mép ngoài trái */
-            transform: rotate(-90deg) translateY(50%);
-        }
-
-        .film::after {
-            right: -25px;
-            /* sát mép ngoài phải */
-            transform: rotate(90deg) translateY(-50%);
-        }
-
-        .frame {
-            background: #ffffff;
-            width: 88%;
-            aspect-ratio: 1 / 0.58;
-            border: 3px solid #c06b7b;
-            border-radius: 6px;
-            overflow: hidden;
-        }
-
-        .frame img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .content {
-            width: 66%;
-            color: #8b4c57;
-        }
-
-        .content h1 {
-            color: #b44d61;
-            font-size: 28px;
-            margin-top: 0;
-            letter-spacing: 0.5px;
-            font-weight: 700;
-        }
-
-        .content p {
-            line-height: 1.7;
-            font-size: 15px;
-            margin-bottom: 20px;
-            text-align: justify;
-        }
-
-        .signature {
-            font-weight: 600;
-            text-decoration: underline;
-            margin-top: 20px;
-        }
-
-        @media (max-width: 768px) {
-            .card {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .film {
-                width: 80%;
-                margin-right: 0;
-                margin-bottom: 20px;
-            }
-
-            .content {
-                width: 90%;
-                text-align: center;
-            }
-        }
-
         /* --- Hiệu ứng chữ bay --- */
         @keyframes fadeIn {
             from {
@@ -277,34 +308,21 @@
 </head>
 
 <body>
-    <div class="card">
-        <div class="film">
-            <div class="frame">
-                <img src="https://i.ibb.co/TP5RkW2/sample1.png" alt="">
+
+    <div class="scene">
+        <!-- actual content card -->
+        <div class="card">
+            <div class="title">Phỏng Vấn<span style="font-size:22px">🎤</span></div>
+
+            <div class="video-frame" aria-label="Khung video">
+                <!-- Thay src bên dưới bằng link YouTube / Google Drive embed hoặc thẻ video -->
+                <iframe src="https://drive.google.com/file/d/1Hx-jVwYcjX8at4mXRI-_kYvtJaXd_aM8/preview"
+                    title="Video phỏng vấn"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
-            <div class="frame">
-                <img src="https://i.ibb.co/TP5RkW2/sample1.png" alt="">
-            </div>
-        </div>
-        <div class="content">
-            <h1>HAPPY BIRTHDAY, MY LOVE!</h1>
-            <p>
-                Happy birthday, my love! Today we celebrate you—the beautiful soul who makes my world brighter just by
-                being in it. From your smile that melts away my worries to the kindness you show everyone around you,
-                you’ve filled my life with so much joy and meaning. Every moment with you feels like a gift, and I’m
-                endlessly grateful for the laughter, the adventures, and even the quiet times we share together. You’re
-                the reason my days feel warmer, happier, and more complete.
-            </p>
-            <p>
-                As you step into another year of life, I just want you to know how deeply you’re loved and cherished. I
-                promise to keep standing by your side, cheering you on, and loving you in every season ahead. Thank you
-                for being my safe haven, my inspiration, and my greatest blessing. Here’s to celebrating you today, and
-                to all the beautiful memories we’ll continue to create. No matter what the future holds, I’ll always be
-                here, loving you endlessly.
-            </p>
-            <p class="signature">
-                Sincerely yours, The love of your life °‧✧
-            </p>
+
+            <div class="caption">Ý nghĩa của ngày 20/11 - Lời chúc</div>
         </div>
     </div>
     <script>
