--- a/gift2.html
+++ b/gift2.html
@@ -304,13 +304,13 @@
                 <div class="reel" id="reel">
                     <!-- exactly 4 thumbs -->
                     <div class="thumb" data-src="https://via.placeholder.com/1600x1000?text=Scene+1"
-                        data-target="#left1"><iframe src="chuc.mp4" alt=""></div>
+                        data-target="#left1"><img src="2011nam.jpg" alt=""></div>
                     <div class="thumb" data-src="https://via.placeholder.com/1600x1000?text=Scene+2"
-                        data-target="#right1"><img src="2011nam.jpg" alt=""></div>
+                        data-target="#right1"><img src="2011tapthe2.jpg" alt=""></div>
                     <div class="thumb" data-src="https://via.placeholder.com/1600x1000?text=Scene+3"
-                        data-target="#left2"><img src="2011tapthe2.jpg" alt=""></div>
+                        data-target="#left2"><img src="2011nu.jpg" alt=""></div>
                     <div class="thumb" data-src="https://via.placeholder.com/1600x1000?text=Scene+4"
-                        data-target="#right2"><img src="2011nu.jpg" alt=""></div>
+                        data-target="#right2"><img src="tapsan.jpg" alt=""></div>
                 </div>
             </div>
 
